- finish Mediator - update links - up settings - add Pool CRUD - update Workers

--- a/ForkBro/appsettings.json
+++ b/ForkBro/appsettings.json
@@ -6,9 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Console": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "AppSetting": {
     "LiveScanRepeat": "10000",
     "CountDaemon": "5",
+    "CountPool": "200",
     "Companies": [
       {
         "id": "22",
