- Add FuzzyComparer - Compare Event Links

--- a/ForkBro/appsettings.json
+++ b/ForkBro/appsettings.json
@@ -1,25 +1,38 @@
 {
   "Logging": {
+    "PathFormat": "Logs/log_{Date}.log",
+    "OutputTemplate": "{Timestamp:HH:mm:ss.fff} [{Level:u3}] {Message}{NewLine}{Exception}",
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Console": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AppSetting": {
     "LiveScanRepeat": "10000",
     "CountDaemon": "5",
+    "MinQuality": "0.75",
     "CountPool": "200",
     "Companies": [
       {
         "id": "22",
+        "enable": "true",
+        "repeat": "1000"
+      },
+      {
+        "id": "16",
         "enable": "true",
         "repeat": "1000"
       }
