--- a/ForkBro/ForkBro.csproj
+++ b/ForkBro/ForkBro.csproj
@@ -25,6 +25,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SentencesFuzzyComparison">
+      <HintPath>..\..\..\Library\SentencesFuzzyComparison.dll</HintPath>
+      <Private>true</Private>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
