--- a/ForkBro/appsettings.json
+++ b/ForkBro/appsettings.json
@@ -1,10 +1,10 @@
 {
   "Logging": {
-    "PathFormat": "Logs/log_{Date}.log",
+    "PathFormat": "Log/log_{Date}.log",
     "OutputTemplate": "{Timestamp:HH:mm:ss.fff} [{Level:u3}] {Message}{NewLine}{Exception}",
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
+      "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -25,7 +25,7 @@
     "CountDaemon": "5",
     "MinQuality": "0.75",
     "CountPool": "200",
-    "TrackedSports": [  ],
+    "TrackedSports": [ "102","104" ],
     "Companies": [
       {
         "id": "22",
