--- a/ForkBro/appSettings.json
+++ b/ForkBro/appSettings.json
@@ -1,5 +1,4 @@
 {
-  "AppSetting": {
     "LiveScanRepeat": "10000",
     "CountDaemon": "5",
     "MinQuality": "0.75",
@@ -7,15 +6,14 @@
     "TrackedSports": [ "102","104" ],
     "Companies": [
       {
-        "id": "22",
+        "name": "_favbet",
         "enable": "true",
         "repeat": "1000"
       },
       {
-        "id": "16",
+        "name": "_1xbet",
         "enable": "true",
         "repeat": "1000"
       }
     ]
-  }
 }
